# dictionary-scraper

./: default.nix  dic.cabal  dictionary-scraper.cabal
.github/workflows/: main.yml
app/: Cambridge.hs  Leo.hs  Main.hs  Types.hs  Util.hs
