cabal-version:      2.4
name:               dictionary-scraper
version:            0.1.0
-- A short (one-line) description of the package.
-- synopsis:
license:            MIT
author:             Kierán Meinhardt
maintainer:         kmein@posteo.de
extra-source-files: CHANGELOG.md

executable dics
    main-is:          Main.hs
    other-modules:    Cambridge
                    , Util
                    , Types
    build-depends:    base ^>=4.14.1.0
                    , scalpel ^>=0.6.2
                    , aeson
                    , bytestring
                    , text
                    , optparse-applicative
    hs-source-dirs:   app
    default-language: Haskell2010
