cabal-version:      2.4
name:               dictionary-scraper
version:            0.1.0
license:            MIT
author:             Kierán Meinhardt
maintainer:         kmein@posteo.de

executable dics
    main-is:          Main.hs
    other-modules:    Cambridge
                    , Util
                    , Types
    build-depends:    base ^>=4.14.1.0
                    , scalpel ^>=0.6.2
                    , aeson ^>=1.5.6.0
                    , bytestring
                    , text
                    , optparse-applicative ^>=0.16.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
